# GladiusSlicer

./: .gitignore  .rustfmt.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml
.github/workflows/: release.yml  rust.yml
docs/: algorithm.md
gladius_core/: Cargo.toml
gladius_core/src/: bounds_checking.rs  calculation.rs  command_pass.rs  converter.rs  lib.rs  optimizer.rs  pipeline.rs  prelude.rs  slice_pass.rs  slicing.rs  tower.rs
gladius_core/src/plotter/: infill.rs  lightning_infill.rs  mod.rs  monotone.rs  perimeter.rs  polygon_operations.rs  support.rs
gladius_shared/: Cargo.toml
gladius_shared/gladius_proc_macros/src/: lib.rs  settings.rs
gladius_shared/src/: error.rs  input.rs  lib.rs  messages.rs  prelude.rs  settings.rs  types.rs  utils.rs  warning.rs
gladius_shared/src/loader/: mod.rs  stl.rs  threemf.rs
settings/: 0.1_layer_height.json  0.2_layer_height.json  0.3_layer_height.json  ABS_Filament.json  BBL_PLA_Filament.json  BBL_x1c.json  CR10.json  PETG_Filament.json  PLA_Filament.json  PrusaMk3.json  TPU_Filament.json  Voron0.1.json  print.json  schema.json  temp_tower.json  test.json
src/: bounds_checking.rs  calculation.rs  command_pass.rs  converter.rs  input.rs  main.rs  optimizer.rs  slice_pass.rs  slicing.rs  test.rs  tower.rs  utils.rs
src/plotter/: infill.rs  lightning_infill.rs  mod.rs  monotone.rs  perimeter.rs  polygon_operations.rs  support.rs
