[package]
name = "gladius_slicer"
version = "0.4.1"
authors = ["mrhatman <lucasince@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[workspace]
members = [ "gladius_core", 
    "gladius_shared"
]

[features]
json_schema_gen = ["gladius_shared/json_schema_gen"]


[workspace.lints.clippy]
allow-unwrap-in-tests = "allow"

[dependencies]
gladius_shared = { path = "gladius_shared", version = "*" }
gladius_core = { path = "gladius_core", version = "*" }

clap = { version = "4", features = ["derive"]}
simple_logger = "5.0.0"
log = "0.4.22"
bincode = "1.3.3"
rayon = "1.5.1"

deser-hjson = "2.2"
serde_json = "^1.0.85"

