[package]
name = "gladius_core"
version = "0.1.0"
edition = "2021"

[lints.clippy]
allow-unwrap-in-tests = "allow"

[dependencies]
log = "0.4.22"

nalgebra = "0.33"
itertools = "0.13"
geo-clipper = "0.8.0"
geo-svg = "0.7.0"

ordered-float = "4.3"
rayon = "1.5.1"

rand = "0.8.5"

evalexpr = "12.0.1"

binary-heap-plus = "0.5.0"

gladius_shared = { path = "../gladius_shared", version = "*" }